<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BLITZ</string>
    <string name="action_settings">Settings</string>
    <string name="send">SEND A</string>
    <string name="popcorn">Popcorn</string>
    <string name="other">Other</string>
    <string name="beer">Beer</string>
    <string name="dinnerplate">Dinnerplate</string>
    <string name="alignment_dot">Alignment Dot</string>
    <string name="blitz_who">Who do you want to Blitz?</string>
    <string name="blitz_where">Where do you want to go?</string>
    <string name="blitz_when">When do you want to go?</string>
    <string name="searching">Search nearby&#8230;</string>
    <string name="your_friend_like">Your friends like:</string>
    <string name="add_description">Add description (optional)</string>
    <string name="time_between">Between</string>
    <string name="time_and">and</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">&#160;Username</string>
    <string name="clickme">Click Me</string>
    <string name="password">&#160;Password</string>
    <string name="passwordConfirm">&#160;Confirm your password</string>
    <string name="needtoregister">Need an account?</string>
    <string name="wrong_string">Wrong</string>
    <string name="toast_string">Invalid username or password</string>
    <string name="logout">Log out</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_blitz_selection">BlitzSelectionActivity</string>
    <string name="title_activity_select_contact">SelectContactActivity</string>
    <string name="title_activity_select_location">SelectLocationActivity</string>
    <string name="title_activity_finalize_time">FinalizeTimeActivity</string>
    <string name="contact_name">Contact Name</string>
    <string name="createcustom">Create custom event&#8230;</string>
    <string name="description">Add description (optional)</string>

    <string-array name="restaurants">
        <item>Mellow Mushroom</item>
        <item>Madam Mam\'s</item>
        <item>Noodles &amp; Company</item>
        <item>Qdoba Mexican Grill</item>
        <item>Quizno\'s</item>
    </string-array>
    <string-array name="movies">
        <item>Forrest Gump</item>
        <item>The Princess Bride</item>
        <item>Harry Potter</item>
        <item>The Hitchhiker\'s Guide to the Galaxy</item>
        <item>Frozen</item>
    </string-array>
    <string-array name="bars">
        <item>Crown &amp; Anchor Pub</item>
        <item>Posse East</item>
        <item>Cain &amp; Abel\'s</item>
        <item>Spider House Cafe</item>
        <item>The Hole in the Wall</item>
    </string-array>

    <string name="title_activity_my_invitations">MyInvitationsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_event_invitation">EventInvitation</string>

</resources>
