<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cs329E.blitz.LoginActivity" 
    android:background="@drawable/blitzbg1">
 
    <EditText
        android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:layout_alignBottom="@+id/passwordText"
        android:layout_alignLeft="@+id/passwordText"
        android:layout_marginBottom="50dp"
        android:background="@drawable/textinput"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" >

        <requestFocus  />

    </EditText>

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:layout_alignLeft="@+id/loginButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="162dp"
        android:background="@drawable/textinput"
        android:ems="10"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:hint="@string/password"
        android:inputType="textPassword" />
    
    
    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#6495a6"
        android:textColor="#ffffff"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/register" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerButton"
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="23dp"
        android:text="@string/needtoregister"
        android:textColor="#000000" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/usernameText"
        android:background="#6495a6"
		android:textColor="#ffffff" 
        android:text="@string/login"/>

</RelativeLayout>