<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cs329E.blitz.RegisterActivity" 
    android:background="@drawable/blitzbg1">
	
    <EditText
	    android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
	    android:layout_above="@+id/passwordText"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="10dp"
	    android:background="@drawable/textinput"
	    android:ems="10"
	    android:inputType="text"
	    android:hint="@string/username" 
        android:textColor="#ffffff"
        android:textColorHint="#ffffff">

	    <requestFocus />
	</EditText>
	
    <EditText
	    android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
	    android:layout_above="@+id/passwordConfirmText"
	    android:layout_alignLeft="@+id/usernameText"
	    android:layout_marginBottom="10dp"
	    android:background="@drawable/textinput"
	    android:ems="10"
	    android:inputType="textPassword"
	    android:hint="@string/password" 
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"/>
	     

	<EditText
	    android:id="@+id/passwordConfirmText"
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
        android:paddingLeft="10dp"
	    android:layout_above="@+id/register_user_button"
	    android:layout_alignLeft="@+id/passwordText"
	    android:layout_marginBottom="43dp"
	    android:background="@drawable/textinput"
	    android:ems="10"
	    android:hint="@string/passwordConfirm"
	    android:inputType="textPassword" 
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"/>
    
	<Button
	    android:id="@+id/register_user_button"
        android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:layout_alignLeft="@+id/passwordConfirmText"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="18dp"
        android:background="#6495a6"
		android:textColor="#ffffff" 
	    android:text="@string/register" />

</RelativeLayout>
