<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/select_location_activity_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="150dp"
    android:weightSum="7"
    tools:context="com.cs329E.blitz.SelectLocationActivity" >


      
    <TextView
        android:id="@+id/where_to_blitz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/blitz_where"
        android:textSize="24sp"
        android:textStyle="bold" />

    
    <EditText
        android:id="@+id/eventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/where_to_blitz"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:hint="@string/createcustom"
        android:background="@drawable/search_background"
        android:inputType="text" >
        <requestFocus />
    </EditText>

	<EditText
        android:id="@+id/eventDescription"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/eventName"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="top"
        android:padding="10dp"
        android:hint="@string/description"
        android:background="@drawable/search_background"
        android:inputType="text" >
    </EditText>
    
            
	<Button
        android:id="@+id/next2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#6495a6"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="Next"
        android:textColor="#ffffff" />

</RelativeLayout>