<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/select_location_activity_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="7"
    tools:context="com.cs329E.blitz.SelectLocationActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >

        <TextView
            android:id="@+id/where_to_blitz_rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/blitz_where"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:weightSum="7" >
			
            <AutoCompleteTextView
                android:id="@+id/autocomplete_items"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:background="@drawable/search_background"
                android:dropDownVerticalOffset="-8dp"
                android:dropDownHorizontalOffset="-7dp"
                android:dropDownWidth="311dp"
                android:hint="@string/searching"
                android:inputType="text"
                android:padding="10dp" >

                <requestFocus />
            </AutoCompleteTextView>
            
            <Button
                android:id="@+id/searchingButton"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_marginTop="-1dp"
                android:background="@drawable/search" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/select_location_placeholder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" >

        <TextView
            android:id="@+id/your_friend_like_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:text="@string/your_friend_like"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/friend_gallery_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5" >
        
		  <com.devsmart.android.ui.HorizontalListView
		      android:id="@+id/hlistview"
		      android:layout_width="match_parent"
		      android:layout_height="100dp"
		      android:padding="5dp"
		      android:background="@drawable/favorites_background" />
        

    </RelativeLayout>

</LinearLayout>