<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/finalize_time_activity_bg"  
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="150dp"
    android:weightSum="7"
    tools:context="com.cs329E.blitz.FinalizeTimeActivity" >


	<TextView
	    android:id="@+id/when_to_blitz"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:text="@string/blitz_when"
	    android:textSize="24sp" />   
	    
	<TextView
	    android:id="@+id/locName"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/when_to_blitz"
	    android:text="@string/blitz_when"
	    android:textSize="24sp"/>  
	
	<Button
	    android:id="@+id/rightNowButton"
	    android:layout_width="wrap_content"
	    android:layout_height="40dp"
	    android:layout_below="@+id/locName"
	    android:layout_marginTop="40dp"
	    android:layout_centerHorizontal="true"
		android:background="#6495a6"
		android:textColor="#ffffff"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:paddingTop="5dp"
		android:paddingBottom="5dp"
		android:textSize="20sp"
	    android:text="Right Now" />
	
	
	<LinearLayout
	    android:id="@+id/between"
		android:layout_height="wrap_content"
 		android:layout_width="wrap_content"
		android:layout_below="@+id/rightNowButton"
		android:layout_marginTop="20dp"
 		android:layout_marginBottom="10dp"
		android:layout_centerHorizontal="true">
	
	
	     <TextView
	         android:id="@+id/time_between"
	         android:layout_width="120dp"
	         android:layout_height="wrap_content"
	         android:paddingRight="10dp"
	         android:gravity="right"
	         android:text="@string/time_between"
	         android:textSize="30sp" />
	
	     <TextView
	         android:id="@+id/between_time_text"
	         android:layout_width="200dp"
	         android:layout_height="60dp"
	         android:layout_marginBottom="10dp" 
	         android:gravity="right"
	         android:paddingTop="8dp"
	         android:paddingRight="60dp"           
	         android:textSize="30sp"
	         android:textStyle="bold"
	         android:onClick="onClickA"
	         android:clickable="true" 
	         android:text="..."
	         android:background="@drawable/time" />

     </LinearLayout>

	<LinearLayout
	    android:id="@+id/and"
		android:layout_height="wrap_content"
 		android:layout_width="wrap_content"
		android:layout_below="@+id/between"
 		android:layout_marginBottom="10dp"
		android:layout_centerHorizontal="true">
	
	
	     <TextView
	         android:id="@+id/time_and"
	         android:layout_width="120dp"
	         android:layout_height="wrap_content"
	         android:paddingRight="10dp"
	         android:gravity="right"
	         android:text="@string/time_and"
	         android:textSize="30sp" />
	
	     <TextView
	         android:id="@+id/and_time_text"
	         android:layout_width="200dp"
	         android:layout_height="60dp"
	         android:gravity="right"
	         android:paddingTop="8dp"
	         android:paddingRight="60dp"           
	         android:textSize="30sp"
	         android:textStyle="bold"
	         android:onClick="onClickB"
	         android:clickable="true" 
	         android:text="..."
	         android:background="@drawable/time" />

     </LinearLayout>


	<Button
	    android:id="@+id/setTimeButton"
	    android:layout_width="wrap_content"
	    android:layout_height="40dp"
	    android:layout_marginTop="20dp"
	    android:layout_below="@+id/and"
	    android:layout_centerHorizontal="true"
		android:background="#6495a6"
		android:textColor="#ffffff"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:paddingTop="5dp"
		android:paddingBottom="5dp"
		android:textSize="20sp"
	    android:text="Set Time" />
	

</RelativeLayout>
